@@ -4,6 +4,9 @@ HISTORY of collective.pwexpiry
 0.9 (unreleased)
 ----------------
 
+- Change the notification e-mail to a translated text e-mail.
+  [pcdummy]
+
 - Show status message "your account has expired" in login popup.
   [pcdummy]
 
